Chnage the logic in get schedules